--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,8 +2,12 @@
   "robotWidth": 0.51,
   "robotLength": 0.51,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
+  "pathFolders": [
+    "New Folder"
+  ],
+  "autoFolders": [
+    "New Folder"
+  ],
   "defaultMaxVel": 6.549777856,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
